--- a/数据分析.md
+++ b/数据分析.md
@@ -50,3 +50,13 @@
 - RFM
 - SWOT
 - 5W1H
+
+### Functions 
+
+* Sum Function
+
+  Simple sum function do the calculation of the area that you are selected.
+
+  For example
+
+  Column C 14:21  
