--- a/数据分析.md
+++ b/数据分析.md
@@ -60,3 +60,15 @@
   For example
 
   Column C 14:21  
+  
+  you can use comma to divide the parts you want to subtotal
+
+* SumIf Function
+
+  ``` excel
+  SUMIF(range, criteria,[sum_range])
+  ```
+
+  Range is the range of where the determinant is.
+
+  
