--- a/数据分析.md
+++ b/数据分析.md
@@ -71,4 +71,36 @@
 
   Range is the range of where the determinant is.
 
-  
+* SumIfs Function
+
+  ``` Excel
+  SUMIFS(sum_range,[criteria_range1],[criteria1],[criteria_range2],[criteria2]...)
+  ```
+
+  日环比：当天GMV / 前一天GMV -1
+
+  日同比： 
+
+We can use the date before to do calculations.
+
+Excel default 1900-01-01 as number one, we can do calculation on the data, such as 1900-01-02 -1 = 1900-01-01
+
+Date Calculation:
+
+``` Excel
+YEAR(serial_number) 提取年份
+MONTH(serial_number) 提取月份
+DAY(serial_number) 提取天
+DATE(YEAR(a),MONTH(a),DAY(a)) 日期组合
+```
+
+NEVER use the date form to store the date.
+
+日期计算
+
+第一天： 2020-1-1 Manually put day 1 into the date
+
+最后一天： 2020-1-31 It is the 2020-2-1 - 1下个月第一天减1
+
+1：22：58
+
