--- a/数据分析.md
+++ b/数据分析.md
@@ -104,3 +104,24 @@ NEVER use the date form to store the date.
 
 1：22：58
 
+* If function
+
+  IF(if statement, if true then a , if false then b)
+
+  simple if statement, second scope returns something a as result if it is true, third scope returns something b as a result if it is false.
+
+  ##### you can always use an if inside an if.
+
+* Vlookup function
+
+  VLOOKUP(lookup_value, table_array, col_index_num,[range_lookup])
+
+​		Vlookup 精确查找是必须相等
+
+​		模糊查找 for example 
+
+​		VLOOKUP("a"&"*",....,...,....)是寻找以a开头的字符串，return		第一个找到的值所对应的数据.
+
+​		“ * ”代替不定数量字符
+
+​	    “ ？”代替下一个字符
