--- a/数据分析.md
+++ b/数据分析.md
@@ -102,7 +102,9 @@ NEVER use the date form to store the date.
 
 最后一天： 2020-1-31 It is the 2020-2-1 - 1下个月第一天减1
 
-1：22：58
+### 1:22:58
+
+
 
 * If function
 
@@ -125,3 +127,11 @@ NEVER use the date form to store the date.
 ​		“ * ”代替不定数量字符
 
 ​	    “ ？”代替下一个字符
+
+* MATCH function
+
+  MATCH(lookup_value, lookup_array, [match_type])
+
+  ### 1:54:00
+
+  
