--- a/数据分析.md
+++ b/数据分析.md
@@ -132,6 +132,10 @@ NEVER use the date form to store the date.
 
   MATCH(lookup_value, lookup_array, [match_type])
 
-  ### 1:54:00
+* Index function
 
-  
+  INDEX(array, row_num, column_num)
+
+Match function looks up the position where the data is, the index functions returns the actual data by entering the index.
+
+Understand the data, and then do the operation yourself, index and match functions are extremely helpful!
