--- a/数据分析.md
+++ b/数据分析.md
@@ -142,3 +142,10 @@ Understand the data, and then do the operation yourself, index and match functio
 
 ### 2:17:00
 
+数据验证
+
+选择序列 可以针对不同项目改变报表
+
+例如 外卖平台 美团,饿了吗
+
+进行日期排列时,使用函数进行下拉,而不是无函数下拉,无函数下拉会导致更改其中一只日期,其他不变的情况。
