--- a/数据分析.md
+++ b/数据分析.md
@@ -152,3 +152,15 @@ Understand the data, and then do the operation yourself, index and match functio
 
 ### 2:28:00
 
+开始做图表前先分析，针对不同平台和不同日期进行不同的计算。
+
+If(平台 = “全部”
+
+SumIf(日期列，日期，GMV列)
+
+SumIfs(GMV列，日期列，日期，平台列，平台)
+
+使用match和index function来自动抓取数据 并自动提取所需数据
+
+
+
