--- a/数据分析.md
+++ b/数据分析.md
@@ -170,3 +170,24 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
 
 对数据进行处理了以后 可以进行周报的美化
 
+## Tableau
+
+* 全世界数据可视化大神，都在基于Tableau进行可视化创作
+* 数据可视化流派
+  * 艺术流 - 数据作画
+  * 分析流 - 说明和分析数据
+  * 实战流 - 为实际业务服务
+  * 垃圾流 - 没有主题，没有意思
+
+* 可视化只是Tableau的基操
+  * 数据赋能
+    * 分析师可以直接将数据看板发布到线上
+    * 自动更新看板
+    * 下载数据和图表
+    * 发送通知-有地方不对劲
+    * 线上修改
+  * 数据探索
+    * 支持亿级数据处理
+
+### 0:14:48
+
