--- a/数据分析.md
+++ b/数据分析.md
@@ -178,7 +178,6 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
   * 分析流 - 说明和分析数据
   * 实战流 - 为实际业务服务
   * 垃圾流 - 没有主题，没有意思
-
 * 可视化只是Tableau的基操
   * 数据赋能
     * 分析师可以直接将数据看板发布到线上
@@ -188,6 +187,24 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
     * 线上修改
   * 数据探索
     * 支持亿级数据处理
+    * 内置算法智能建模
 
-### 0:14:48
+* Excel
+  * 容易上手
+  * 功能强大
+  * 过程难以复用和自动化
 
+* SQL
+  * 功能强大，但只擅长于取数和业务查询
+  * 可以重复执行和自动化
+
+* Python/R
+  * 学习难度高
+  * 功能强大，数据处理，描述性分析和算法建模都能做
+  * 可以重复执行和自动化
+
+* Tableau
+  * 容易上手
+  * 美观直接
+  * 功能强大，数据探索和可视化是第一名
+  * 可以重复执行
