Types of diagrams

--- a/数据分析.md
+++ b/数据分析.md
@@ -208,3 +208,14 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
   * 美观直接
   * 功能强大，数据探索和可视化是第一名
   * 可以重复执行
+
+基础图标制作
+
+* 柱状图
+  * 行：日期
+  * 列： GMV
+
+* 热力图
+
+### 1:41:49
+
