--- a/数据分析.md
+++ b/数据分析.md
@@ -217,5 +217,32 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
 
 * 热力图
 
-### 1:41:49
+### BI 仪表盘搭建
+
+* 区分用户
+
+  * 高层管理者
+  * 中层管理者
+    * 看的最多
+    * 组长，店长 
+
+  * 底层管理者
+
+* 主次分明，详略得当
+  * 坐标轴从0开始
+
+* 符合大众认知和审美
+* 适度
+  * 颜色不要太多
+  * 排版合适
+  * 避免使用3D效果
+
+* 5秒原则
+  * 如果你5秒内看懂了，说明你图做得很好
+
+* 恰到好处的说明
+* Less is more
+* 
+
+### 1:54:49
 
