--- a/数据分析.md
+++ b/数据分析.md
@@ -258,5 +258,17 @@ SumIfs(GMV列，日期列，日期，平台列，平台)
 
 ## SQL 基础语法 + 运行原理 + 云端数据库搭建
 
+###  Basic Grammar
 
+* I can use the sign "';" to distinct different operations, If I want several tables.
+
+```sql
+SELECT name
+FROM world
+WHERE name LIKE '_t%'
+```
+
+The above statement finds the name of the country where second character is t.
+
+### 0:55:24
 
