--- a/数据分析.md
+++ b/数据分析.md
@@ -270,5 +270,9 @@ WHERE name LIKE '_t%'
 
 The above statement finds the name of the country where second character is t.
 
-### 0:55:24
+### SQl 0:55:24
+
+
+
+Python 00:42:27
 
