--- a/数据分析.md
+++ b/数据分析.md
@@ -276,3 +276,200 @@ The above statement finds the name of the country where second character is t.
 
 Python 00:42:27
 
+#### Numpy
+
+##### 1. Numpy array 生成
+
+``` python
+result = np.arange(1,10)
+result = array([1, 2, 3, 4, 5, 6, 7, 8, 9])
+```
+
+##### 2. List 转 Np array
+
+``` python
+result = np.array(range(0,10))
+result = array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])
+```
+
+##### 3. 元素类型 & 转化
+
+```python
+np.array(range(1,4)).dtype
+dtype (`int32`)
+
+np.array(range(1,4)).astype('float')
+#assign type `astype`
+array([1., 2., 3.])
+```
+
+##### 4. 形状与行列
+
+``` python
+ar = np.array(range(0,12))
+ar = array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])
+ar.shape
+(12,)
+#It means the shape of ar is 12 rows 0 column
+#We need to reshape it
+new_ar = ar.reshape(3,4)
+new_ar = 
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]])
+#It shapes the ar to an new_ar as 3 rows 4 columns
+new_ar.shape
+(3,4)
+```
+
+##### 5. 行与列
+
+axis = 0 列
+
+axis = 1 行
+
+``` python
+arr = np.arange(0,12).reshape(3,4)
+arr = 
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]])
+result1 = arr.sum(axis = 0)
+result1 = array([12, 15, 18, 21])
+
+result2 = arr.sum(axis = 1)
+result2 = aarray([ 6, 22, 38])
+```
+
+##### 6. 数组运算
+
+``` python
+arr = np.arange(0,12).reshape(3,4)
+arr = 
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]])
+
+arr = arr + arr
+arr = ?
+array([[ 0,  2,  4,  6],
+       [ 8, 10, 12, 14],
+       [16, 18, 20, 22]])
+#It basically add every entry to itself
+```
+
+##### 7. 不同形状数组运算
+
+``` python
+arr = np.arange(0,12).reshape(3,4)
+arr = 
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]])
+
+arr1 = np.arange(0,3).reshape(3,1)
+arr1 = ?
+array[[0]
+ [1]
+ [2]]
+#Since it has 3 rows.
+result = arr + arr1
+result = ?
+array([[ 0,  1,  2,  3],
+       [ 5,  6,  7,  8],
+       [10, 11, 12, 13]])
+#We add every entry to each rows.
+
+arr2 = np.arange(0,4).reshape(1,4)
+arr2 = ?
+array [[0 1 2 3]]
+#Since it has 4 columns.
+result = arr + arr2
+result = ?
+array([[ 0,  2,  4,  6],
+       [ 4,  6,  8, 10],
+       [ 8, 10, 12, 14]])
+#We add every entry to each columns.
+```
+
+##### 8. 逻辑运算
+
+``` python
+arr = ?
+array([[ 0,  1,  2,  3],
+       [ 4,  5,  6,  7],
+       [ 8,  9, 10, 11]])
+
+arr4 = np.arange(1,13).reshape(3,4)
+arr4 = ?
+array([[ 1,  2,  3,  4],
+       [ 5,  6,  7,  8],
+       [ 9, 10, 11, 12]])
+
+arr == arr4
+array([[False, False, False, False],
+       [False, False, False, False],
+       [False, False, False, False]])
+
+arr4 = np.arange(0,12).reshape(3,4)
+arr == arr4
+array([[ True,  True,  True,  True],
+       [ True,  True,  True,  True],
+       [ True,  True,  True,  True]])
+```
+
+##### 9. 数组切片
+
+``` python
+arr = np.array([5, 4, 0, 1, 0])
+result = print(arr[1:0])
+result = []
+
+result1 = print(arr[1:2])
+result1 = [4]
+```
+
+##### 10. 二维数组切片
+
+``` python
+arr2d = np.arange(1,10).reshape(3,3)
+arr2d = ?
+array[[1 2 3]
+ [4 5 6]
+ [7 8 9]]
+
+result = print(arr2d[2])
+result = ?
+[7 8 9]
+
+result1 = print(arr2d[2][2])
+result1 = 9
+
+result2 = print(arr2d[:2])
+result2 = ?
+[[1 2 3]
+ [4 5 6]]
+
+result3 = print(arr2d[:2][1:])
+result3 = ?
+[[4 5 6]]
+
+result4 = print(arr2d[:2,1:])
+result4 = ?
+[[2 3]
+ [5 6]] 
+```
+
+
+
+##### 2.7.1 三元表达式 where
+
+``` python
+x_arr = np.array([1.1, 1.2, 1.3, 1.4, 1.5])
+y_arr = np.array([2.1, 2.2, 2.3, 2.4, 2.5])
+
+result = np.where(x_arr > 1.3, x_arr, y_arr)
+```
+
+
+
